@@ -1,3 +1,9 @@
+2006-08-12  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/iterators.R (P, path) : removed, they're 
+	built into E()
+	(E, E<-) : add P, path arguments
+
 2006-08-10  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/iterators.R ([.igraph.vs, [.igraph.es) : 
